--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="utf-8">
     <title>Connect</title>
     <base href="/">
+    <script src="http://localhost:35729/livereload.js"></script>
 </head>
 
 <body>
-TEST
+Connect app based on TypeScript
 <script type="module" src="dist/main.js"></script>
 
 </body>
