--- a/index.html
+++ b/index.html
@@ -8,7 +8,21 @@
     <title>Connect</title>
     <base href="/">
     <script src="http://localhost:35729/livereload.js"></script>
-    <style>input {background: red}</style>
+    <style>
+        html {
+            display: flex;
+            height: 100%;
+        }
+
+        body {
+            height: 100%;
+            margin: 0;
+            width: 100%;
+            background: #424242;
+            color: #fff;
+            text-align: center;
+            font-size: 24px;
+        }</style>
 </head>
 
 <body>
