--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             height: 100%;
         }
 
+        p {
+            font-size: 20px!important;
+        }
+
         body {
             height: 100%;
             margin: 0;
