--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
             height: 100%;
         }
 
-        p {
-            font-size: 20px!important;
-        }
-
         body {
             height: 100%;
             margin: 0;
@@ -30,7 +26,7 @@
 </head>
 
 <body>
-Connect app based on TypeScript
+VIA-Connect app based on TypeScript
 <script>
     (function (d, w, c) {
         w.ViaToken = 'eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJob3N0bmFtZSI6ImxvY2FsaG9zdCIsImxvY2F0aW9uSWQiOiI1YzFhM2QwOWU3YzI1NzFlZThjMTM4YTEiLCJpYXQiOjE1NTk1NDM4OTJ9.u2OfNW3GomsnIDX5JS0P7zEv4UON6yIxEbmEFHgz6sRyAkSKxzNLKMAnp1ZIfXuIkf37WZ_EusVofZgodT56tUD3C20SFvs73zULJAk93v1XR6n43ACuO0cI4Eo5waCHxQ9oZeAYvl_TcClxViFXeIO46u7dw-VQXZelukTpQxg';
@@ -39,7 +35,7 @@ Connect app based on TypeScript
             (w[c].q = w[c].q || []).push(arguments);
         };
         s.async = true;
-        s.src = 'dist/main.js';
+        s.src = 'dist/via_chat.js';
         if (d.head) d.head.appendChild(s);
     })(document, window, 'ViaConnect');
 </script>
