--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@ VIA-Connect app based on TypeScript
 
 <script>
     (function (d, w, c) {
-        w.ViaToken = 'eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJob3N0bmFtZSI6InZpYS1jb25uZWN0LmdtbC5haXNub3ZhdGlvbnMuY29tIiwibG9jYXRpb25JZCI6IjVhZjk4YjhiMTZiMDhjMmY1ODcwY2JjMCIsImlhdCI6MTU1OTgwMjk3NH0.bwpk7EEBPUWj_Yb4rwydiWXib4eWGolZInjB9GjV7nRBhiIjeqgVaGH7c-HtI4IPKAkBPaci9SWCI-VVfjJUnB97LvU-pesEq1sEV2WLHU9DxjkFQRRe-s0b_xHNR7lwoGQoocEJaKAzYA-sXYmW-Jh44gEl2iYCbIIt_xUWDBA';
+        w.ViaToken = 'eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJob3N0bmFtZSI6ImxvY2FsaG9zdCIsImxvY2F0aW9uSWQiOiI1YWY5OGI4YjE2YjA4YzJmNTg3MGNiYzAiLCJpYXQiOjE1NTk4MDYwMjR9.r0L4B5LiryY5QVASxitfUSeOQPFtYNzyvPJo_iNuAjW-s8oHwLXQD4UXUtCQurura9iuaRQ8PZNHGF4148cJ_v6wo_GR3_8iNqMlfD8qzjCuYFKi3485l8TcX7cjHG9qCjsG2ciutbKqEAWRtAcaGrhL8aC47j7FtQcofBcaeYo';
         var s = d.createElement('script');
         w[c] = w[c] || function () {
             (w[c].q = w[c].q || []).push(arguments);
         };
         s.async = true;
-        s.src = 'http://via-connect.gml.aisnovations.com/via_chat.js';
+        s.src = 'dist/via_chat.js';
         if (d.head) d.head.appendChild(s);
     })(document, window, 'ViaConnect');
 </script>
